--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -117,7 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="NoUsersFound" xml:space="preserve">
+    <value />
+  </data>
+  <data name="TheUsernameFieldisRequired" xml:space="preserve">
+    <value />
+  </data>
   <data name="ThisUserDeactivated" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UsernameOrPassWordwrong" xml:space="preserve">
     <value />
   </data>
 </root>
