--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -117,22 +117,112 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AnErrorOccurred" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AnErrorOccurredWhileResettingYourPassword" xml:space="preserve">
+    <value />
+  </data>
   <data name="BadRequest" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Construction" xml:space="preserve">
     <value />
   </data>
   <data name="DataNotExists" xml:space="preserve">
     <value />
   </data>
+  <data name="FormIsNotValid" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Home" xml:space="preserve">
+    <value />
+  </data>
+  <data name="InstructionsForResettingYourPasswordHaveBeenSentToYourEmailAddress" xml:space="preserve">
+    <value />
+  </data>
+  <data name="InvalidLoginAttempt" xml:space="preserve">
+    <value />
+  </data>
+  <data name="InvalidPasswordResetToken" xml:space="preserve">
+    <value />
+  </data>
+  <data name="IsLockedOut5Minutes" xml:space="preserve">
+    <value />
+  </data>
+  <data name="LanguageRequired" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ModelNotValid" xml:space="preserve">
+    <value />
+  </data>
+  <data name="NoEmailsWereFound" xml:space="preserve">
+    <value />
+  </data>
   <data name="NoUsersFound" xml:space="preserve">
+    <value />
+  </data>
+  <data name="PasswordAndConfirmPasswordNotMatched" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Renovation" xml:space="preserve">
+    <value />
+  </data>
+  <data name="SelectedAnswerValueFake" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Service" xml:space="preserve">
+    <value />
+  </data>
+  <data name="SomethingIsWrong" xml:space="preserve">
+    <value />
+  </data>
+  <data name="TheEmailFieldIsRequired" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ThePasswordFieldisRequired" xml:space="preserve">
     <value />
   </data>
   <data name="TheUsernameFieldisRequired" xml:space="preserve">
     <value />
   </data>
+  <data name="ThisEmailAddressIsAlreadySubscribed" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ThisModelDoesNotExist" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ThisOrderNotExis" xml:space="preserve">
+    <value />
+  </data>
   <data name="ThisUserDeactivated" xml:space="preserve">
     <value />
   </data>
+  <data name="TotalPriceFake" xml:space="preserve">
+    <value />
+  </data>
+  <data name="TouristNotExist" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UsernameOrEmailHasAlreadyBeenUsed" xml:space="preserve">
+    <value />
+  </data>
   <data name="UsernameOrPassWordwrong" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UserNotAuthenticate" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UserNotFound" xml:space="preserve">
+    <value />
+  </data>
+  <data name="YouHaveSubscribedToTheSiteInformation" xml:space="preserve">
+    <value />
+  </data>
+  <data name="YourPasswordHasBeenSuccessfullyReset" xml:space="preserve">
     <value />
   </data>
 </root>
