--- a/ConstructionSite/Resources/SharedResource.en-US.resx
+++ b/ConstructionSite/Resources/SharedResource.en-US.resx
@@ -120,22 +120,61 @@
   <data name="About" xml:space="preserve">
     <value />
   </data>
+  <data name="AboutUs" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AfterTheProject" xml:space="preserve">
+    <value />
+  </data>
   <data name="AnErrorOccurred" xml:space="preserve">
     <value />
   </data>
   <data name="AnErrorOccurredWhileResettingYourPassword" xml:space="preserve">
     <value />
   </data>
+  <data name="Architecture" xml:space="preserve">
+    <value />
+  </data>
   <data name="BadRequest" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Blog" xml:space="preserve">
+    <value />
+  </data>
+  <data name="CivilEngineer" xml:space="preserve">
     <value />
   </data>
   <data name="Construction" xml:space="preserve">
     <value />
   </data>
+  <data name="ConstructionAssistant" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ConstructionManager" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Consulting" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Contact" xml:space="preserve">
+    <value />
+  </data>
   <data name="DataNotExists" xml:space="preserve">
     <value />
   </data>
+  <data name="Electrical" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Electricians" xml:space="preserve">
+    <value />
+  </data>
+  <data name="EmployeesAreContinuallyTrainedOnSafetyIssues" xml:space="preserve">
+    <value />
+  </data>
   <data name="FormIsNotValid" xml:space="preserve">
+    <value />
+  </data>
+  <data name="GalleryProject" xml:space="preserve">
     <value />
   </data>
   <data name="Home" xml:space="preserve">
@@ -153,7 +192,13 @@
   <data name="IsLockedOut5Minutes" xml:space="preserve">
     <value />
   </data>
+  <data name="JuniorArchitect" xml:space="preserve">
+    <value />
+  </data>
   <data name="LanguageRequired" xml:space="preserve">
+    <value />
+  </data>
+  <data name="MeetOurTeam" xml:space="preserve">
     <value />
   </data>
   <data name="ModelNotValid" xml:space="preserve">
@@ -165,7 +210,22 @@
   <data name="NoUsersFound" xml:space="preserve">
     <value />
   </data>
+  <data name="OurHistoryAndFacts" xml:space="preserve">
+    <value />
+  </data>
   <data name="PasswordAndConfirmPasswordNotMatched" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Portfolio" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Preconstruction" xml:space="preserve">
+    <value />
+  </data>
+  <data name="QualityConstructionContinuesAfterTheProject" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ReadMore" xml:space="preserve">
     <value />
   </data>
   <data name="Renovation" xml:space="preserve">
@@ -217,6 +277,15 @@
     <value />
   </data>
   <data name="UserNotFound" xml:space="preserve">
+    <value />
+  </data>
+  <data name="WeUseTechnologyToDoTheJobMoreQuickly" xml:space="preserve">
+    <value />
+  </data>
+  <data name="WhatIsIncluded" xml:space="preserve">
+    <value />
+  </data>
+  <data name="WhyChooseUs" xml:space="preserve">
     <value />
   </data>
   <data name="YouHaveSubscribedToTheSiteInformation" xml:space="preserve">
