--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -126,6 +126,9 @@
   <data name="AfterTheProject" xml:space="preserve">
     <value />
   </data>
+  <data name="All" xml:space="preserve">
+    <value />
+  </data>
   <data name="AnErrorOccurred" xml:space="preserve">
     <value />
   </data>
@@ -139,6 +142,12 @@
     <value />
   </data>
   <data name="Blog" xml:space="preserve">
+    <value />
+  </data>
+  <data name="BuilderManager" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Building" xml:space="preserve">
     <value />
   </data>
   <data name="CivilEngineer" xml:space="preserve">
@@ -177,6 +186,12 @@
   <data name="GalleryProject" xml:space="preserve">
     <value />
   </data>
+  <data name="Garden" xml:space="preserve">
+    <value />
+  </data>
+  <data name="GreenBuilding" xml:space="preserve">
+    <value />
+  </data>
   <data name="Home" xml:space="preserve">
     <value />
   </data>
@@ -198,10 +213,16 @@
   <data name="LanguageRequired" xml:space="preserve">
     <value />
   </data>
+  <data name="LuxuryBuildings" xml:space="preserve">
+    <value />
+  </data>
   <data name="MeetOurTeam" xml:space="preserve">
     <value />
   </data>
   <data name="ModelNotValid" xml:space="preserve">
+    <value />
+  </data>
+  <data name="News" xml:space="preserve">
     <value />
   </data>
   <data name="NoEmailsWereFound" xml:space="preserve">
@@ -231,6 +252,12 @@
   <data name="Renovation" xml:space="preserve">
     <value />
   </data>
+  <data name="ResconstructionServices" xml:space="preserve">
+    <value />
+  </data>
+  <data name="RoofingAndFlooringServices" xml:space="preserve">
+    <value />
+  </data>
   <data name="SelectedAnswerValueFake" xml:space="preserve">
     <value />
   </data>
@@ -238,6 +265,9 @@
     <value />
   </data>
   <data name="SomethingIsWrong" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Testimonials" xml:space="preserve">
     <value />
   </data>
   <data name="TheEmailFieldIsRequired" xml:space="preserve">
