--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -123,6 +123,9 @@
   <data name="AboutUs" xml:space="preserve">
     <value />
   </data>
+  <data name="Address" xml:space="preserve">
+    <value />
+  </data>
   <data name="AfterTheProject" xml:space="preserve">
     <value />
   </data>
@@ -153,6 +156,9 @@
   <data name="CivilEngineer" xml:space="preserve">
     <value />
   </data>
+  <data name="Conditions" xml:space="preserve">
+    <value />
+  </data>
   <data name="Construction" xml:space="preserve">
     <value />
   </data>
@@ -175,6 +181,12 @@
     <value />
   </data>
   <data name="Electricians" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value />
+  </data>
+  <data name="EmailAddress" xml:space="preserve">
     <value />
   </data>
   <data name="EmployeesAreContinuallyTrainedOnSafetyIssues" xml:space="preserve">
@@ -219,7 +231,13 @@
   <data name="MeetOurTeam" xml:space="preserve">
     <value />
   </data>
+  <data name="Message" xml:space="preserve">
+    <value />
+  </data>
   <data name="ModelNotValid" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Name" xml:space="preserve">
     <value />
   </data>
   <data name="News" xml:space="preserve">
@@ -235,6 +253,9 @@
     <value />
   </data>
   <data name="PasswordAndConfirmPasswordNotMatched" xml:space="preserve">
+    <value />
+  </data>
+  <data name="PhoneNumber" xml:space="preserve">
     <value />
   </data>
   <data name="Portfolio" xml:space="preserve">
@@ -261,10 +282,22 @@
   <data name="SelectedAnswerValueFake" xml:space="preserve">
     <value />
   </data>
+  <data name="SendMessage" xml:space="preserve">
+    <value />
+  </data>
   <data name="Service" xml:space="preserve">
     <value />
   </data>
   <data name="SomethingIsWrong" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Subject" xml:space="preserve">
+    <value />
+  </data>
+  <data name="TermOfUse" xml:space="preserve">
+    <value />
+  </data>
+  <data name="TermsAndConditions" xml:space="preserve">
     <value />
   </data>
   <data name="Testimonials" xml:space="preserve">
@@ -291,10 +324,16 @@
   <data name="ThisUserDeactivated" xml:space="preserve">
     <value />
   </data>
+  <data name="Top" xml:space="preserve">
+    <value />
+  </data>
   <data name="TotalPriceFake" xml:space="preserve">
     <value />
   </data>
   <data name="TouristNotExist" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UsefulLinks" xml:space="preserve">
     <value />
   </data>
   <data name="UsernameOrEmailHasAlreadyBeenUsed" xml:space="preserve">
