--- a/ConstructionSite/Resources/SharedResource.en-US.resx
+++ b/ConstructionSite/Resources/SharedResource.en-US.resx
@@ -205,61 +205,61 @@
     <value>Green building</value>
   </data>
   <data name="Home" xml:space="preserve">
-    <value />
+    <value>Home</value>
   </data>
   <data name="InstructionsForResettingYourPasswordHaveBeenSentToYourEmailAddress" xml:space="preserve">
-    <value />
+    <value>Instructions for resetting your password have been sent to your Email address</value>
   </data>
   <data name="InvalidLoginAttempt" xml:space="preserve">
-    <value />
+    <value>Invalid login attempt</value>
   </data>
   <data name="InvalidPasswordResetToken" xml:space="preserve">
-    <value />
+    <value>Invalid password reset token</value>
   </data>
   <data name="IsLockedOut5Minutes" xml:space="preserve">
-    <value />
+    <value>Is Locked out 5 minutes</value>
   </data>
   <data name="JuniorArchitect" xml:space="preserve">
-    <value />
+    <value>Junior Architect</value>
   </data>
   <data name="LanguageRequired" xml:space="preserve">
-    <value />
+    <value>Language is required</value>
   </data>
   <data name="LuxuryBuildings" xml:space="preserve">
-    <value />
+    <value>LUXURY BUILDINGS</value>
   </data>
   <data name="MeetOurTeam" xml:space="preserve">
-    <value />
+    <value>MEET OUR TEAM</value>
   </data>
   <data name="Message" xml:space="preserve">
-    <value />
+    <value>Message</value>
   </data>
   <data name="ModelNotValid" xml:space="preserve">
-    <value />
+    <value>Model is not valid</value>
   </data>
   <data name="Name" xml:space="preserve">
-    <value />
+    <value>Name</value>
   </data>
   <data name="News" xml:space="preserve">
-    <value />
+    <value>News</value>
   </data>
   <data name="NoEmailsWereFound" xml:space="preserve">
-    <value />
+    <value>No Emails were found</value>
   </data>
   <data name="NoUsersFound" xml:space="preserve">
-    <value />
+    <value>No users found</value>
   </data>
   <data name="OurHistoryAndFacts" xml:space="preserve">
-    <value />
+    <value>Our history and facts</value>
   </data>
   <data name="PasswordAndConfirmPasswordNotMatched" xml:space="preserve">
-    <value />
+    <value>Password and confirm password not matched</value>
   </data>
   <data name="PhoneNumber" xml:space="preserve">
-    <value />
+    <value>Phone number</value>
   </data>
   <data name="Portfolio" xml:space="preserve">
-    <value />
+    <value>PORTFOLIO</value>
   </data>
   <data name="Preconstruction" xml:space="preserve">
     <value />
