Chatmayan Key-leri Resource-lara elave etdim

--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -255,6 +255,9 @@
   <data name="OurHistoryAndFacts" xml:space="preserve">
     <value />
   </data>
+  <data name="OurServices" xml:space="preserve">
+    <value />
+  </data>
   <data name="PasswordAndConfirmPasswordNotMatched" xml:space="preserve">
     <value />
   </data>
