--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -255,6 +255,9 @@
   <data name="OurHistoryAndFacts" xml:space="preserve">
     <value>Tariximiz və faktlarımız</value>
   </data>
+  <data name="OurServices" xml:space="preserve">
+    <value>Bizim xidmətlər</value>
+  </data>
   <data name="PasswordAndConfirmPasswordNotMatched" xml:space="preserve">
     <value />
   </data>
