--- a/ConstructionSite/Resources/SharedResource.en-US.resx
+++ b/ConstructionSite/Resources/SharedResource.en-US.resx
@@ -255,6 +255,9 @@
   <data name="OurHistoryAndFacts" xml:space="preserve">
     <value>Our history and facts</value>
   </data>
+  <data name="OurServices" xml:space="preserve">
+    <value>Our Services</value>
+  </data>
   <data name="PasswordAndConfirmPasswordNotMatched" xml:space="preserve">
     <value>Password and confirm password not matched</value>
   </data>
