--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -300,6 +300,9 @@
   <data name="Service" xml:space="preserve">
     <value />
   </data>
+  <data name="Services" xml:space="preserve">
+    <value />
+  </data>
   <data name="SomethingIsWrong" xml:space="preserve">
     <value />
   </data>
