--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -177,8 +177,8 @@
   <data name="ContactUs" xml:space="preserve">
     <value>BİZİMLƏ ƏLAQƏ SAXLAYIN</value>
   </data>
-  <data name="DataNotExists" xml:space="preserve">
-    <value />
+  <data name="DataDoesNotExists" xml:space="preserve">
+    <value>Məlumat yoxdur</value>
   </data>
   <data name="Electrical" xml:space="preserve">
     <value>Elektrik</value>
