--- a/ConstructionSite/Resources/SharedResource.en-US.resx
+++ b/ConstructionSite/Resources/SharedResource.en-US.resx
@@ -291,6 +291,9 @@
   <data name="RoofingAndFlooringServices" xml:space="preserve">
     <value>Roofing and flooring services</value>
   </data>
+  <data name="SeeAll" xml:space="preserve">
+    <value>SEE ALL</value>
+  </data>
   <data name="SelectedAnswerValueFake" xml:space="preserve">
     <value>Selected answer value fake</value>
   </data>
