--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -291,6 +291,9 @@
   <data name="RoofingAndFlooringServices" xml:space="preserve">
     <value />
   </data>
+  <data name="SeeAll" xml:space="preserve">
+    <value />
+  </data>
   <data name="SelectedAnswerValueFake" xml:space="preserve">
     <value />
   </data>
