--- a/ConstructionSite/Resources/SharedResource.en-US.resx
+++ b/ConstructionSite/Resources/SharedResource.en-US.resx
@@ -121,7 +121,7 @@
     <value>About</value>
   </data>
   <data name="AboutUs" xml:space="preserve">
-    <value>About us</value>
+    <value>About </value>
   </data>
   <data name="Address" xml:space="preserve">
     <value>Address</value>
