--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -321,6 +321,9 @@
   <data name="Testimonials" xml:space="preserve">
     <value>RƏSMİ RƏYLƏR</value>
   </data>
+  <data name="THECONSTRUCTION" xml:space="preserve">
+    <value>İNŞAAT</value>
+  </data>
   <data name="TheEmailFieldIsRequired" xml:space="preserve">
     <value />
   </data>
@@ -346,7 +349,7 @@
     <value>YUXARI</value>
   </data>
   <data name="UsefulLinks" xml:space="preserve">
-    <value>Faydalı bağlantılar</value>
+    <value>Faydalı linklər</value>
   </data>
   <data name="UsernameOrEmailHasAlreadyBeenUsed" xml:space="preserve">
     <value />
