--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -118,19 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="About" xml:space="preserve">
-    <value />
+    <value>Около</value>
   </data>
   <data name="AboutUs" xml:space="preserve">
-    <value />
+    <value>Насчет нас</value>
   </data>
   <data name="Address" xml:space="preserve">
-    <value />
+    <value>Адрес</value>
   </data>
   <data name="AfterTheProject" xml:space="preserve">
-    <value />
+    <value>После проекта</value>
   </data>
   <data name="All" xml:space="preserve">
-    <value />
+    <value>Все</value>
   </data>
   <data name="AnErrorOccurred" xml:space="preserve">
     <value />
@@ -139,49 +139,49 @@
     <value />
   </data>
   <data name="Architecture" xml:space="preserve">
-    <value />
+    <value>Архитектура</value>
   </data>
   <data name="BadRequest" xml:space="preserve">
-    <value />
+    <value>Плохой запрос</value>
   </data>
   <data name="Blog" xml:space="preserve">
-    <value />
+    <value>Блог</value>
   </data>
   <data name="BuilderManager" xml:space="preserve">
-    <value />
+    <value>Строитель Менеджер</value>
   </data>
   <data name="Building" xml:space="preserve">
-    <value />
+    <value>Здание</value>
   </data>
   <data name="CivilEngineer" xml:space="preserve">
     <value />
   </data>
   <data name="Conditions" xml:space="preserve">
-    <value />
+    <value>условия</value>
   </data>
   <data name="Construction" xml:space="preserve">
-    <value />
+    <value>строительство</value>
   </data>
   <data name="ConstructionAssistant" xml:space="preserve">
-    <value />
+    <value>Помощник по строительству</value>
   </data>
   <data name="ConstructionManager" xml:space="preserve">
-    <value />
+    <value>Руководитель строительства</value>
   </data>
   <data name="Consulting" xml:space="preserve">
-    <value />
+    <value>Консалтинг</value>
   </data>
   <data name="Contact" xml:space="preserve">
-    <value />
+    <value>контакт</value>
   </data>
   <data name="ContactUs" xml:space="preserve">
-    <value />
+    <value>Связаться с нами</value>
   </data>
   <data name="DataDoesNotExists" xml:space="preserve">
     <value />
   </data>
   <data name="Electrical" xml:space="preserve">
-    <value />
+    <value>электрический</value>
   </data>
   <data name="Electricians" xml:space="preserve">
     <value />
@@ -202,13 +202,13 @@
     <value />
   </data>
   <data name="Garden" xml:space="preserve">
-    <value />
+    <value>Сад</value>
   </data>
   <data name="GreenBuilding" xml:space="preserve">
     <value />
   </data>
   <data name="Home" xml:space="preserve">
-    <value />
+    <value>Домой</value>
   </data>
   <data name="InstructionsForResettingYourPasswordHaveBeenSentToYourEmailAddress" xml:space="preserve">
     <value />
@@ -241,10 +241,10 @@
     <value />
   </data>
   <data name="Name" xml:space="preserve">
-    <value />
+    <value>название</value>
   </data>
   <data name="News" xml:space="preserve">
-    <value />
+    <value>Новости</value>
   </data>
   <data name="NoEmailsWereFound" xml:space="preserve">
     <value />
@@ -256,19 +256,19 @@
     <value />
   </data>
   <data name="OurServices" xml:space="preserve">
-    <value />
+    <value>Наши сервисы</value>
   </data>
   <data name="PasswordAndConfirmPasswordNotMatched" xml:space="preserve">
     <value />
   </data>
   <data name="PhoneNumber" xml:space="preserve">
-    <value />
+    <value>Телефонный номер</value>
   </data>
   <data name="Portfolio" xml:space="preserve">
-    <value />
+    <value>портфолио</value>
   </data>
   <data name="PortfolioDetail" xml:space="preserve">
-    <value />
+    <value>Деталь портфолио</value>
   </data>
   <data name="Preconstruction" xml:space="preserve">
     <value />
@@ -280,7 +280,7 @@
     <value />
   </data>
   <data name="ReadMore" xml:space="preserve">
-    <value />
+    <value>Читать далее</value>
   </data>
   <data name="Renovation" xml:space="preserve">
     <value />
@@ -292,34 +292,37 @@
     <value />
   </data>
   <data name="SeeAll" xml:space="preserve">
-    <value />
+    <value>Увидеть все</value>
   </data>
   <data name="SelectedAnswerValueFake" xml:space="preserve">
     <value />
   </data>
   <data name="SendMessage" xml:space="preserve">
-    <value />
+    <value>Отправить сообщение</value>
   </data>
   <data name="Service" xml:space="preserve">
-    <value />
+    <value>обслуживание</value>
   </data>
   <data name="Services" xml:space="preserve">
-    <value />
+    <value>Сервисы</value>
   </data>
   <data name="SomethingIsWrong" xml:space="preserve">
     <value />
   </data>
   <data name="Subject" xml:space="preserve">
-    <value />
+    <value>Тема</value>
   </data>
   <data name="TermOfUse" xml:space="preserve">
-    <value />
+    <value>Условия пользования</value>
   </data>
   <data name="TermsAndConditions" xml:space="preserve">
     <value />
   </data>
   <data name="Testimonials" xml:space="preserve">
-    <value />
+    <value>Отзывы</value>
+  </data>
+  <data name="THECONSTRUCTION" xml:space="preserve">
+    <value>ПОСТРОЙКА</value>
   </data>
   <data name="TheEmailFieldIsRequired" xml:space="preserve">
     <value />
@@ -343,10 +346,10 @@
     <value />
   </data>
   <data name="Top" xml:space="preserve">
-    <value />
+    <value>верхний</value>
   </data>
   <data name="UsefulLinks" xml:space="preserve">
-    <value />
+    <value>Полезные ссылки</value>
   </data>
   <data name="UsernameOrEmailHasAlreadyBeenUsed" xml:space="preserve">
     <value />
