--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -321,6 +321,9 @@
   <data name="Testimonials" xml:space="preserve">
     <value>RƏSMİ RƏYLƏR</value>
   </data>
+  <data name="THEBESTCOMPANY" xml:space="preserve">
+    <value>Ən yaxşı ŞİRKƏT</value>
+  </data>
   <data name="THECONSTRUCTION" xml:space="preserve">
     <value>İNŞAAT</value>
   </data>
