Uygun dil resource-u elave etdim

--- a/ConstructionSite/Resources/SharedResource.en-US.resx
+++ b/ConstructionSite/Resources/SharedResource.en-US.resx
@@ -366,6 +366,9 @@
   <data name="WeUseTechnologyToDoTheJobMoreQuickly" xml:space="preserve">
     <value>We use technology to do the job more quickly</value>
   </data>
+  <data name="WhatIsIncluded" xml:space="preserve">
+    <value>What Is Included</value>
+  </data>
   <data name="WhyChooseUs" xml:space="preserve">
     <value>WHY CHOOSE US</value>
   </data>
