--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -204,6 +204,9 @@
   <data name="Garden" xml:space="preserve">
     <value>Сад</value>
   </data>
+  <data name="GetInTouchWithUs" xml:space="preserve">
+    <value>GET IN TOUCH WITH US</value>
+  </data>
   <data name="GreenBuilding" xml:space="preserve">
     <value />
   </data>
