Resources-daki ReadMore-un az ve rus dilindeki value-larin deyishdim

--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -283,7 +283,7 @@
     <value>Layihədən sonra keyfiyyətli tikinti davam edir</value>
   </data>
   <data name="ReadMore" xml:space="preserve">
-    <value>DAHA ÇOX OXU</value>
+    <value>DAHA ÇOX</value>
   </data>
   <data name="Renovation" xml:space="preserve">
     <value>Yeniləmə</value>
