--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -283,7 +283,7 @@
     <value />
   </data>
   <data name="ReadMore" xml:space="preserve">
-    <value>Читать далее</value>
+    <value>БОЛЬШЕ</value>
   </data>
   <data name="Renovation" xml:space="preserve">
     <value>ремонт</value>
