Services/Index-deki boshluqlari tenzimledim

--- a/ConstructionSite/Resources/SharedResource.en-US.resx
+++ b/ConstructionSite/Resources/SharedResource.en-US.resx
@@ -132,6 +132,9 @@
   <data name="All" xml:space="preserve">
     <value>All</value>
   </data>
+  <data name="AllServices" xml:space="preserve">
+    <value>All services</value>
+  </data>
   <data name="AnErrorOccurred" xml:space="preserve">
     <value>An Error Occurred</value>
   </data>
