--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -132,6 +132,9 @@
   <data name="All" xml:space="preserve">
     <value>Hamısı</value>
   </data>
+  <data name="AllServices" xml:space="preserve">
+    <value>Bütün xidmətlər</value>
+  </data>
   <data name="AnErrorOccurred" xml:space="preserve">
     <value />
   </data>
