--- a/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
+++ b/ConstructionSite/Resources/SharedResource.az-Latn-AZ.resx
@@ -198,6 +198,9 @@
   <data name="FormIsNotValid" xml:space="preserve">
     <value />
   </data>
+  <data name="Galery" xml:space="preserve">
+    <value>Qalereya</value>
+  </data>
   <data name="GalleryProject" xml:space="preserve">
     <value>QALEREYA LAYİHƏSİ</value>
   </data>
