--- a/ConstructionSite/Resources/SharedResource.ru-RU.resx
+++ b/ConstructionSite/Resources/SharedResource.ru-RU.resx
@@ -273,6 +273,9 @@
   <data name="PhoneNumber" xml:space="preserve">
     <value>Телефонный номер</value>
   </data>
+  <data name="Photos" xml:space="preserve">
+    <value>Фотографии</value>
+  </data>
   <data name="Portfolio" xml:space="preserve">
     <value>портфолио</value>
   </data>
@@ -374,6 +377,9 @@
   </data>
   <data name="UserNotFound" xml:space="preserve">
     <value>Пользователь не найден</value>
+  </data>
+  <data name="Videos" xml:space="preserve">
+    <value>Видео</value>
   </data>
   <data name="WeUseTechnologyToDoTheJobMoreQuickly" xml:space="preserve">
     <value />
